--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,35 +1,17 @@
-trigger:
-  branches:
-    include:
-      - main
+steps:
+  - checkout: self
 
-stages:
-- stage: Build
-  jobs:
-  - job: BuildJob
-    displayName: "Run Maven on agent1"
-    pool:
-      name: agent-pool
-      demands:
-        - maven
-        - java
-    steps:
-      - checkout: self
+  - script: |
+      echo "Sanity check on self-hosted agent"
+      java -version
+      mvn -version
+    displayName: "Verify Java & Maven versions"
 
-      - script: |
-          echo "Verify Java & Maven"
-          java -version
-          mvn -version
-        displayName: "Verify tools"
-
-      - task: Maven@3
-        displayName: 'Build and test with Maven'
-        inputs:
-          mavenPomFile: 'pom.xml'
-          mavenOptions: '-Xmx3072m'
-          javaHomeOption: 'JDKVersion'
-          jdkVersionOption: '11'
-          jdkArchitectureOption: 'x64'
-          publishJUnitResults: true
-          testResultsFiles: '**/surefire-reports/TEST-*.xml'
-          goals: 'package'
+  - task: Maven@3
+    displayName: 'Build and test with Maven'
+    inputs:
+      mavenPomFile: 'pom.xml'
+      mavenOptions: '-Xmx3072m'
+      publishJUnitResults: true
+      testResultsFiles: '**/surefire-reports/TEST-*.xml'
+      goals: 'package'
