Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,7 @@
 steps:
   - checkout: self
+    persistCredentials: true
+    fetchDepth: 0
 
   - script: |
       echo "Sanity check on self-hosted agent"
@@ -7,10 +9,18 @@ steps:
       mvn -version
     displayName: "Verify Java & Maven versions"
 
+  - script: |
+      echo "Check for pom.xml"
+      dir
+      dir project
+      dir project\demo
+      dir project\demo\sp1
+    displayName: "Check project/demo/sp1 structure"
+
   - task: Maven@3
     displayName: 'Build and test with Maven'
     inputs:
-      mavenPomFile: 'project/demo/sp1/pom.xml'   # ✅ Corrected path
+      mavenPomFile: 'project/demo/sp1/pom.xml'
       mavenOptions: '-Xmx3072m'
       publishJUnitResults: true
       testResultsFiles: '**/surefire-reports/TEST-*.xml'
